# ChangeLog for net-misc/asterisk-sounds
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.7 2005/09/15 02:43:46 stkn Exp $

  15 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-sounds-1.0.8.ebuild:
  Stable on x86.

  15 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  asterisk-sounds-1.0.6.ebuild, asterisk-sounds-1.0.7.ebuild,
  asterisk-sounds-1.0.8.ebuild:
  Fixed SRC_URI.

*asterisk-sounds-1.2.0_beta1 (09 Sep 2005)

  09 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/asterisk-sounds-1.2.0_beta1-description.diff,
  +asterisk-sounds-1.2.0_beta1.ebuild:
  Version bump.

*asterisk-sounds-1.0.8 (25 Jun 2005)

  25 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.8.ebuild, asterisk-sounds-1.0.6.ebuild,
  asterisk-sounds-1.0.7.ebuild:
  Version bump. Added non-root permission fixes.

  10 May 2005; David Holm <dholm@gentoo.org> asterisk-sounds-1.0.7.ebuild:
  Added to ~ppc.

*asterisk-sounds-1.0.7 (21 Mar 2005)

  21 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.7.ebuild:
  Version bump.

*asterisk-sounds-1.0.6 (10 Mar 2005)

  10 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +asterisk-sounds-1.0.6.ebuild:
  Initial import. This has been splitted from the asterisk ebuild.
