@@ -1,11 +1,9 @@
-MD5 1c79a235d896b61288cf13481034b94f asterisk-sounds-1.0.6.ebuild 788
+MD5 6fa2f8332e94b5f3d13276d66bc348c8 ChangeLog 1445
 MD5 fdb31630ec361c9078cff81c9d9f81ae asterisk-sounds-1.0.7.ebuild 788
-MD5 cc4f91235bede396459af021c964dedc asterisk-sounds-1.2.0_beta1.ebuild 1016
 MD5 f82a8bd1aa130d76aad035e3fe971abe asterisk-sounds-1.0.8.ebuild 787
-MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
-MD5 2080297bb37d817cf5bf74563b88d8d9 ChangeLog 1333
-MD5 52b41306e47aa47d6c7825684c715017 files/digest-asterisk-sounds-1.0.7 74
+MD5 cc4f91235bede396459af021c964dedc asterisk-sounds-1.2.0_beta1.ebuild 1016
 MD5 c54e61bcd73f8f35aaa96d23ecdd8403 files/asterisk-sounds-1.2.0_beta1-description.diff 1455
-MD5 be8b1e0161c87c766857daadd1f606b9 files/digest-asterisk-sounds-1.2.0_beta1 80
-MD5 08e0799d2792b7833b850ee29bcb5bea files/digest-asterisk-sounds-1.0.6 74
+MD5 52b41306e47aa47d6c7825684c715017 files/digest-asterisk-sounds-1.0.7 74
 MD5 0e381530d5433423afd7cea188ce8043 files/digest-asterisk-sounds-1.0.8 74
+MD5 be8b1e0161c87c766857daadd1f606b9 files/digest-asterisk-sounds-1.2.0_beta1 80
+MD5 44cf247f04cc83413fcb40ed59d0847a metadata.xml 248
