@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/asterisk-sounds
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.7 2005/09/15 02:43:46 stkn Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-sounds/Attic/ChangeLog,v 1.8 2006/02/28 02:26:47 stkn Exp $
+
+  28 Feb 2006; Stefan Knoblich <stkn@gentoo.org>
+  -asterisk-sounds-1.0.6.ebuild:
+  Removed old 1.0.x version.
 
   15 Sep 2005; Stefan Knoblich <stkn@gentoo.org>
   asterisk-sounds-1.0.8.ebuild:
